<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UTest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">请输入用户名</string>
    <string name="password">请输入密码</string>
    <string name="login">登录</string>
    <string name="reset">重置</string>
    <string name="main_title">C · T</string>

</resources>
