<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    >

    <FrameLayout  android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/editText1"
            android:layout_width="300dp"
            android:layout_height="65dp"
            android:layout_marginTop="200dp"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="35dp"
            android:background="@drawable/input_style"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/username"
            android:layout_marginStart="50dp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="300dp"
            android:layout_height="65dp"
            android:layout_marginTop="276dp"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="35dp"
            android:background="@drawable/input_style"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginStart="50dp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="103dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:textSize="50sp"
            android:text="@string/main_title" />

        <Button
            android:id="@+id/button1"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="360dp"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:background="@drawable/button_drawable"
            android:text="@string/login"
            android:layout_marginStart="20dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:layout_marginLeft="234dp"
            android:layout_marginTop="360dp"
            android:background="@drawable/btn_reset"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:text="@string/reset"
            android:layout_marginStart="234dp" />



        <!--		<LinearLayout-->
        <!--			android:layout_width="match_parent"-->
        <!--			android:layout_height="wrap_content" >-->

        <!--			-->
        <!--		</LinearLayout>-->

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>